intermediate revision - fixed few deprecated warnings, restored deiver dependency in the pom.xml